# shax

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/: actors.xcf  items.xcf  ldtk_ui.xcf  props.xcf  shaxes.xcf  tiles.xcf  world.ldtk
assets/actors/: player.prefab.ron  skeleton.prefab.ron  test_skelly.lua  test_skelly.prefab.ron
assets/items/: key.item.ron
assets/props/: chest.prefab.ron  door.prefab.ron  door_barred.prefab.ron  fire.prefab.ron  moving_spike.lua  moving_spike.prefab.ron
src/: main.rs
src/data/: action.rs  color.rs  item.rs  level.rs  mod.rs  player.rs  prefab.rs  sprite.rs  turn.rs
src/lua/: entity.rs  global.rs  mod.rs  script.rs  types.rs  util.rs
src/system/: action.rs  camera.rs  level.rs  mod.rs  prefab.rs  sprite.rs  turn.rs
src/util/: serde.rs  types.rs
