[package]
name = "shax"
version = "0.1.0"
authors = ["erin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow           = "1.0.38"
bevy             = "0.5"
bevy_ldtk        = {path = "crates/bevy_ldtk"} # same as github, but with updated ldtk version
css-color-parser = "*"
enumset          = "1.0.6"
ldtk             = { version = "0.4.1", features = ["ldtk-v0-9-3"] }
rlua             = "0.17.0"
ron              = "0.6.4"
serde            = "1.0.123"
serde_json       = "1.0.61"
# tiled          = "0.9"

[profile.dev]
opt-level = 3